--- a/index.html
+++ b/index.html
@@ -177,8 +177,8 @@
 
             if (figure === "cuadrado" || figure === "rectángulo" || figure === "triangulo equilátero" || figure === "Cuadrado"
                 || figure === "Rectángulo" || figure === "rectangulo" || figure === "Rectangulo" || figure === "Triangulo equilatero"
-               || figure === "Triángulo equilatero" || figure === "Triángulo equilátero" || === "Triángulo Equilatero"
-               || figure === "Triangulo Equilatero" || figure === "Triangulo Equilátero" || === "Triángulo Equilátero") {
+               || figure === "Triángulo equilatero" || figure === "Triángulo equilátero" || figure === "Triángulo Equilatero"
+               || figure === "Triangulo Equilatero" || figure === "Triangulo Equilátero" || figure === "Triángulo Equilátero") {
                 if (operation === "area") {
                     result = base * height;
                     document.getElementById("pa-result").innerText = "Área: " + result;
