--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         <button onclick="appendToDisplay('.')">.</button>
         <button onclick="appendToDisplay('^')">xⁿ</button>
         <button onclick="appendToDisplay('÷')">÷</button>
-        <button onclick="appendToDisplay('Math.sqrt(')">√</button>
+        <button onclick="appendToDisplay('√(')">√</button>
         <button onclick="clearDisplay()">C</button>
         <button onclick="calculateResult()">=</button>
     </div>
@@ -123,6 +123,7 @@
                 let expression = display.innerText
                     .replace(/×/g, '*')
                     .replace(/÷/g, '/')
+                    .replace(/√\(/g, 'Math.sqrt(')
                     .replace(/\^/g, '**');
 
                 display.innerText = eval(expression);
